rename routes and fix overflow issue

--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -22,3 +22,8 @@
     line-height: 36px;    
     /* max-width: 700px; */
 }
+
+#root {
+    width:100%;
+    overflow: hidden;
+}
